docs: Update README.md

--- a/.env.example
+++ b/.env.example
@@ -16,8 +16,9 @@ PLAYWRIGHT_HEADLESS=true
 PLAYWRIGHT_STORAGE_STATE_PATH=.auth/storage-state.json
 
 # Weekly check target (for `pnpm run check:weekly`)
-# LO40 | LP72
-CHECK_TARGET=LO40
+# lotto365 | pension
+# legacy aliases: LO40 | LP72
+CHECK_TARGET=lotto365
 
 # Optional: override weekly check date range (YYYYMMDD)
 # CHECK_FROM_YMD=20260208
